--- a/essai1/res/layout/activity_main.xml
+++ b/essai1/res/layout/activity_main.xml
@@ -12,4 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
+     <Button
+         android:id="@+id/itineraire"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true"
+         android:layout_alignParentTop="true"
+         android:text="@string/Button" />
+
+     <Button
+         android:id="@+id/valider"
+         android:visibility="invisible"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_alignParentLeft="true"
+         android:layout_alignParentRight="true"
+         android:layout_below="@+id/itineraire"
+         android:text="@string/valider" />
+
 </RelativeLayout>
